--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Functions</title>
+    <title>JS Button Switch</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div class="container">
-        <div class="box">
-         <button type="button" class="btn" id="btn">Click me!</button>
-         <button type="button" class="btn" id="btn">Click me!</button>
-         <button type="button" class="btn" id="btn">Click me!</button>
-         <button type="button" class="btn" id="btn">Click me!</button>
-        </div>
+  
+
+  <div id="app">
+    <div class="seccion">
+      <div id="recuadro"></div>
+    </div>
+
+    <div class="seccion">
+      <div id="buttons">
+        <div class="button" id="red">Red</div>
+        <div class="button" id="blue">Blue</div>
+        <div class="button" id="green">Green</div>
+        <div class="button" id="yellow">Yellow</div>
+      </div>
+    </div>
   </div>
 
-    
+   <script src="/main.js"></script> 
 </body>
 </html>
